# cpymad

./: .appveyor.yml  .buildinfo  .gitignore  .project  .pydevproject  .travis.yml  .zenodo.json  CHANGES.rst  COPYING.rst  CTestConfig.cmake  CTestSetup.cmake  CTestTestfile.cmake  HACKING.rst  MADX_VERSION  MANIFEST.in  NOTES.txt  README.rst  README.txt  TODO  build.properties  build.xml  building.html  genindex.html  getting-started.html  index.html  install.sh  installation.html  known-issues.html  links.txt  madx.def  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_elemaccess.py  usage.html
.github/checkout-madx/: action.yml
.github/patch/: cmake_minimum_version.patch  fix-cmake-Fortran_FLAGS.patch  fix-index-variable-i-redefined.patch  fix-macos-symbol-not-found-mad_argc.patch  fix-madx-win32.patch
.github/test/: action.yml
.github/workflows/: build.yml
_images/: inheritance-54099195b75b3cfc4cafee25a1733c27754e2e98.png.map  inheritance-71a9f107fe0ea93a50703b6e49bc3ab69393f810.png.map  inheritance-988e0c2687d9210fd7992077b33f04587ef16bf4.png.map
_modules/: index.html  posix.html
_modules/cpymad/: madx.html  model.html  types.html  util.html
_sources/: getting-started.rst.txt  index.rst.txt  index.txt  installation.rst.txt  known-issues.rst.txt  usage.rst.txt
_sources/automod/: cpymad.libmadx.apply_table_selections.rst.txt  cpymad.libmadx.eval.rst.txt  cpymad.libmadx.finish.rst.txt  cpymad.libmadx.get_active_sequence_name.rst.txt  cpymad.libmadx.get_base_type_names.rst.txt  cpymad.libmadx.get_beam.rst.txt  cpymad.libmadx.get_beam_names.rst.txt  cpymad.libmadx.get_current_beam.rst.txt  cpymad.libmadx.get_defined_command.rst.txt  cpymad.libmadx.get_defined_command_names.rst.txt  cpymad.libmadx.get_element.rst.txt  cpymad.libmadx.get_element_count.rst.txt  cpymad.libmadx.get_element_index.rst.txt  cpymad.libmadx.get_element_index_by_position.rst.txt  cpymad.libmadx.get_element_name.rst.txt  cpymad.libmadx.get_element_names.rst.txt  cpymad.libmadx.get_element_positions.rst.txt  cpymad.libmadx.get_expanded_element.rst.txt  cpymad.libmadx.get_expanded_element_count.rst.txt  cpymad.libmadx.get_expanded_element_index.rst.txt  cpymad.libmadx.get_expanded_element_index_by_position.rst.txt  cpymad.libmadx.get_expanded_element_name.rst.txt  cpymad.libmadx.get_expanded_element_names.rst.txt  cpymad.libmadx.get_expanded_element_positions.rst.txt  cpymad.libmadx.get_global_element.rst.txt  cpymad.libmadx.get_global_element_count.rst.txt  cpymad.libmadx.get_global_element_index.rst.txt  cpymad.libmadx.get_global_element_name.rst.txt  cpymad.libmadx.get_globals.rst.txt  cpymad.libmadx.get_options.rst.txt  cpymad.libmadx.get_sequence_beam.rst.txt  cpymad.libmadx.get_sequence_count.rst.txt  cpymad.libmadx.get_sequence_names.rst.txt  cpymad.libmadx.get_sequence_twiss_table_name.rst.txt  cpymad.libmadx.get_table_column.rst.txt  cpymad.libmadx.get_table_column_count.rst.txt  cpymad.libmadx.get_table_column_names.rst.txt  cpymad.libmadx.get_table_count.rst.txt  cpymad.libmadx.get_table_names.rst.txt  (+68 more)
_static/: documentation_options.js
automod/: cpymad.libmadx.apply_table_selections.html  cpymad.libmadx.eval.html  cpymad.libmadx.finish.html  cpymad.libmadx.get_active_sequence_name.html  cpymad.libmadx.get_base_type_names.html  cpymad.libmadx.get_beam.html  cpymad.libmadx.get_beam_names.html  cpymad.libmadx.get_current_beam.html  cpymad.libmadx.get_defined_command.html  cpymad.libmadx.get_defined_command_names.html  cpymad.libmadx.get_element.html  cpymad.libmadx.get_element_count.html  cpymad.libmadx.get_element_index.html  cpymad.libmadx.get_element_index_by_position.html  cpymad.libmadx.get_element_name.html  cpymad.libmadx.get_element_names.html  cpymad.libmadx.get_element_positions.html  cpymad.libmadx.get_expanded_element.html  cpymad.libmadx.get_expanded_element_count.html  cpymad.libmadx.get_expanded_element_index.html  cpymad.libmadx.get_expanded_element_index_by_position.html  cpymad.libmadx.get_expanded_element_name.html  cpymad.libmadx.get_expanded_element_names.html  cpymad.libmadx.get_expanded_element_positions.html  cpymad.libmadx.get_global_element.html  cpymad.libmadx.get_global_element_count.html  cpymad.libmadx.get_global_element_index.html  cpymad.libmadx.get_global_element_name.html  cpymad.libmadx.get_globals.html  cpymad.libmadx.get_options.html  cpymad.libmadx.get_sequence_beam.html  cpymad.libmadx.get_sequence_count.html  cpymad.libmadx.get_sequence_names.html  cpymad.libmadx.get_sequence_twiss_table_name.html  cpymad.libmadx.get_table_column.html  cpymad.libmadx.get_table_column_count.html  cpymad.libmadx.get_table_column_names.html  cpymad.libmadx.get_table_count.html  cpymad.libmadx.get_table_names.html  cpymad.libmadx.get_table_row.html  (+67 more)
cpymad/: COPYING.rst  __init__.py  _rpc.py  clibmadx.pxd  index.html  libmadx.html  libmadx.pyx  madx.html  madx.py  model.html  model.py  object.py  stream.py  types.html  types.py  util.html  util.py
demo/: example1.py  ipac11.py  test0.py
doc/: Makefile  building.rst  conf.py  getting-started.rst  index.rst  installation.rst  known-issues.rst  make.bat  usage.rst
examples/: index.html  madx.html  model.html
installation/: dependencies.html  index.html  linux.html  macos.html  troubleshooting.html  unix.html  windows.html
madx/: mad_gvar_access.c  mad_gvar_access.h
src/: .gitignore  MANIFEST.in  README  setup.py
test/: README.txt  WORKING.txt  _compat.py  answer_42.madx  answer_43.madx  answer_call42.madx  base_test.py  common.py  run_tests.cmake  test_aperture.py  test_clic.py  test_ilc.py  test_ilc45.py  test_lhc-b4.py  test_lhc.py  test_locator.py  test_madx.py  test_makethin.madx  test_model.py  test_model_locator.py  test_mro.py  test_pandas.py  test_regression.py  test_resource.py  test_rpc.py  test_survey.py  test_transfer_map.py  test_util.py
utils/: build_cpymad_mingw32.bat  build_madx.bat  build_madx.ps1  build_madx.py  build_madx_mingw32.bat  build_wheels.bat  build_wheels.ps1  cleanup_artifacts.py  clopts.py
(+827 files in other folders)
