[project]
name = "cpymad"
description = "Cython binding to MAD-X"
dynamic = ["version"]

authors = [
    {name = "Thomas Gläßle", email = "t_glaessle@gmx.de"},
    {name = "Yngve Inntjore Levinsen"},
    {name = "Kajetan Fuchsberger"},
]
maintainers = [
    {name = "Thomas Gläßle", email = "t_glaessle@gmx.de"},
    {name = "Riccardo De Maria", email = "riccardodemaria@gmail.com"},
]

readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "COPYING.rst", text = "GPLv3+"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: Apache Software License",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

urls.Github = "https://github.com/hibtc/cpymad"
urls.Issues = "https://github.com/hibtc/cpymad/issues"
urls.Documentation = "http://hibtc.github.io/cpymad/"
urls.Changelog = "https://github.com/hibtc/cpymad/blob/master/CHANGES.rst"

requires-python = ">=3.5"

dependencies = [
    "numpy",
    "minrpc>=0.1.0",
]
optional-dependencies.doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_substitution_extensions",
    "sphinx_automodapi",
    "sphinx_autodoc_typehints",
    "pandas",
]
optional-dependencies.dev = [
    "cython",
    "flake8",
    "pytest",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
    "cython>=3.1.0a1 ; python_version >= '3.13'",   # Cython3.1 needed for free-threaded python
    "cython<3        ; python_version  < '3.8'",    # Cython3.1 dropped support for python<3.8
    "cython          ; python_version >= '3.8' and python_version < '3.13'", # no particular requirements
]

[tool.setuptools]
dynamic.version.attr = "cpymad.__version__"
include-package-data = true
