[metadata]
name             = cpymad
version          = attr: cpymad.__version__
description      = Cython binding to MAD-X
url              = https://github.com/hibtc/cpymad
long_description = file: README.rst
author           = Thomas Gläßle
author_email     = t_glaessle@gmx.de
license          = GPLv3+
license_file     = COPYING.rst
classifiers      =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: Apache Software License
    License :: Other/Proprietary License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Physics
long_description_content_type = text/x-rst

[options]
zip_safe = false
include_package_data = true
python_requires = >=2.7
install_requires =
    importlib_resources
    numpy
    minrpc>=0.0.8
setup_requires =
    setuptools>=18
    Cython

[flake8]
# codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# default: ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,W504,W505
ignore = E126,E221,E226,E241,E272,E306,E701,E731,E741,W503,W504
exclude = .git,__pycache__,doc/conf.py,build,dist,.eggs
max-line-length = 84

[coverage:paths]
# when running `coverage combine`, replace these paths by `src/cpymad`, see:
# https://coverage.readthedocs.io/en/latest/config.html#paths
source =
    src/cpymad/
    */site-packages/cpymad-*.egg/cpymad
    */site-packages/cpymad/
